--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecom",
   "version": "0.1.0",
-  "homepage": "https://aara25.github.io/ecom",
+  "homepage": "https://aara25.github.io/ecom/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
